improve portal toolbar

--- a/src/main/resources/resources/templates-portal.properties
+++ b/src/main/resources/resources/templates-portal.properties
@@ -36,12 +36,28 @@
 #   If you are unsure which license is appropriate for your use,
 #   please contact the sales department at sales@jahia.com.
 
+#Skin
 portalWidget.box.advanced.jsp=Advanced portal widget box
 
+# Widget
 jnt_googleFeedWidget=RSS feed widget
+jnt_googleFeedWidget.url=RSS feed URL
+jnt_googleFeedWidget.nbEntries=Number of entries
 jnt_helloWorldWidget=Hello world widget
 jnt_googleMapWidget=Map widget
 jnt_twitterPortalWidget=Twitter widget
 
-jnt_googleFeedWidget.url=RSS feed URL
-jnt_googleFeedWidget.nbEntries=Number of entries
+# Toolbar
+jnt_portalToolbar=Portal toolbar
+jnt_portalToolbar.customize=Customize
+jnt_portalToolbar.customize.tooltip=This portal is currently a model, you can use it but cannot do modification to it. By clicking on 'Customize' it will create your own portal based on this model. You will be free to add, move or remove contents like widgets or tabs in your own portal
+jnt_portalToolbar.addTab.tooltip=Create a new tab
+jnt_portalToolbar.deleteTab.tooltip=Delete the current tab
+jnt_portalToolbar.editTab.tooltip=Edit the current tab
+jnt_portalToolbar.editTab=Edit tab {0}
+jnt_portalToolbar.addWidget.tooltip=Add a new widget
+jnt_portalToolbar.tabForm.name=Name
+jnt_portalToolbar.tabForm.template=Template
+jnt_portalToolbar.tabForm.widgetsSkin=Widgets skin
+jnt_portalToolbar.addWidgetForm.name=Name
+jnt_portalToolbar.addWidgetForm.type=Type
