--- a/src/main/resources/resources/templates-portal.properties
+++ b/src/main/resources/resources/templates-portal.properties
@@ -54,7 +54,7 @@ jnt_portalToolbar.customize.tooltip=This portal is currently a model, you can us
 jnt_portalToolbar.addTab.tooltip=Create a new tab
 jnt_portalToolbar.deleteTab.tooltip=Delete the current tab
 jnt_portalToolbar.editTab.tooltip=Edit the current tab
-jnt_portalToolbar.editTab=Edit tab {0}
+jnt_portalToolbar.editTab=Edit {0}
 jnt_portalToolbar.addWidget.tooltip=Add a new widget
 jnt_portalToolbar.tabForm.name=Name
 jnt_portalToolbar.tabForm.template=Template
