improve portal widget skin wrapper, to be set at widget level make a example with the hello world widget

--- a/src/main/resources/resources/templates-portal.properties
+++ b/src/main/resources/resources/templates-portal.properties
@@ -37,7 +37,9 @@
 #   please contact the sales department at sales@jahia.com.
 
 #Skin
-portalWidget.box.advanced.jsp=Advanced portal widget box
+portalWidget.box.basic.jsp=Basic box
+portalWidget.box.advanced_blue.jsp=Advanced blue box
+portalWidget.box.advanced_green.jsp=Advanced green box
 
 # Widget
 jnt_googleFeedWidget=RSS feed widget
