--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <artifactId>templates-portal</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
-  <name>Jahia Templates Portal</name>
+  <name>Portal Templates</name>
   <description>This is the custom module (portal) for running on a Jahia xCM server.</description>
   <scm>
     <connection>scm:dummy:uri</connection>
