--- a/src/main/resources/resources/templates-portal.properties
+++ b/src/main/resources/resources/templates-portal.properties
@@ -51,52 +51,12 @@ jnt_bootstrapMainContent.body=Body
 jnt_bootstrapMainContent.image=Image
 jnt_bootstrapMainContent_description=Bootstrap content with an HTML text and an image
 
-
-jnt_section=Section element
-jnt_section.cssClassName= CSS class name
-jnt_section.sectionElement=Section element
-jnt_section.sectionElement.article=article
-jnt_section.sectionElement.aside=aside
-jnt_section.sectionElement.div=div
-jnt_section.sectionElement.footer=footer
-jnt_section.sectionElement.header=header
-jnt_section.sectionElement.nav=nav
-jnt_section.sectionElement.section=section
-jnt_section.sectionId = ID
-
-jnt_navside=Side menu
-
-jmix_alternateTitle=Alternative page title
-jmix_alternateTitle.alternateTitle=Long title
-jmix_intro = Introduction
-jmix_intro.intro = Introduction
-
-jnt_fullTitle = Title
-
-jmix_alink=Link
-jmix_alink.linkType=Link type
-jmix_alink.linkType.external=External
-jmix_alink.linkType.internal=Internal
-jmix_alink.linkType.nolink=No link
-jmix_alink.noTitle = No title
-jmix_internalLink.linkTitle = Title
-jmix_internalLink.internalLink Internal Link
-jmix_externalLink.linkTitle = Title
-jmix_externalLink.externalLink = External link
-jmix_alink.linkTitle = Title
-
-jnt_pageBanner = Banner
-jnt_pageBanner.text = Text
-jnt_pageBanner.image = Image
-jnt_pageBanner.bgimage = Background image
-
-
 #Skin
 portalWidget.box.basic.jsp=Basic box
 portalWidget.box.advanced_blue.jsp=Advanced blue box
 portalWidget.box.advanced_green.jsp=Advanced green box
 
-# Widget
+#ï¿½Widget
 jnt_googleFeedWidget=RSS feed widget
 jnt_googleFeedWidget.url=RSS feed URL
 jnt_googleFeedWidget.nbEntries=Number of entries
