improve widget creation add new component to be able to drag&drop new widgets in a portal page

--- a/src/main/resources/resources/templates-portal.properties
+++ b/src/main/resources/resources/templates-portal.properties
@@ -82,3 +82,6 @@ jnt_portalToolbar.tabForm.template=Template
 jnt_portalToolbar.tabForm.widgetsSkin=Widgets skin
 jnt_portalToolbar.addWidgetForm.name=Name
 jnt_portalToolbar.addWidgetForm.type=Type
+
+#Widget zap
+jnt_portalWidgetsZap=Portal widgets zap
