implement lock in portal templates

--- a/src/main/resources/resources/templates-portal.properties
+++ b/src/main/resources/resources/templates-portal.properties
@@ -82,6 +82,8 @@ jnt_portalToolbar.tabForm.template=Template
 jnt_portalToolbar.tabForm.widgetsSkin=Widgets skin
 jnt_portalToolbar.addWidgetForm.name=Name
 jnt_portalToolbar.addWidgetForm.type=Type
+jnt_portalToolbar.lock.tooltip=Lock
+jnt_portalToolbar.unlock.tooltip=Unlock
 
 #Widget zap
 jnt_portalWidgetsZap=Portal widgets zap
