--- a/pom.xml
+++ b/pom.xml
@@ -29,18 +29,18 @@
       <version>1.0-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
-      <dependency>
-          <groupId>atg.taglib.json</groupId>
-          <artifactId>json-taglib</artifactId>
-          <version>0.4.1</version>
-          <scope>compile</scope>
-          <exclusions>
-              <exclusion>
-                  <groupId>commons-el</groupId>
-                  <artifactId>commons-el</artifactId>
-              </exclusion>
-          </exclusions>
-      </dependency>
+    <dependency>
+      <groupId>atg.taglib.json</groupId>
+      <artifactId>json-taglib</artifactId>
+      <version>0.4.1</version>
+      <scope>compile</scope>
+      <exclusions>
+        <exclusion>
+          <artifactId>commons-el</artifactId>
+          <groupId>commons-el</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
   </dependencies>
   <repositories>
     <repository>
@@ -65,7 +65,7 @@
         <configuration>
           <instructions>
             <Jahia-Module-Type>templatesSet</Jahia-Module-Type>
-            <Jahia-Depends>bootstrap,bootstrap-components,contact,default,event,facets,search,teasers,portal-core,twitter</Jahia-Depends>
+            <Jahia-Depends>bootstrap,bootstrap-components,contact,default,event,facets,search,teasers,portal-factory,portal-dashboard</Jahia-Depends>
           </instructions>
         </configuration>
       </plugin>
