--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     </dependency>
     <dependency>
       <groupId>org.jahia.modules</groupId>
-      <artifactId>portal-core</artifactId>
+      <artifactId>portal-factory</artifactId>
       <version>1.0-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
