add bookmark button in the header of the site

--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
         <configuration>
           <instructions>
             <Jahia-Module-Type>templatesSet</Jahia-Module-Type>
-            <Jahia-Depends>default,bootstrap-components,bootstrap,contact,event,facets,search,teasers,portal-factory_user-portal,portal-factory_core</Jahia-Depends>
+            <Jahia-Depends>default,bootstrap-components,bootstrap,contact,event,facets,search,teasers,portal-factory_core,portal-factory_user-portal</Jahia-Depends>
           </instructions>
         </configuration>
       </plugin>
