add Bookmark button in bootstrap nav (template set)

--- a/src/main/resources/resources/portal-factory_default-templates.properties
+++ b/src/main/resources/resources/portal-factory_default-templates.properties
@@ -41,6 +41,7 @@ sampleBootsrapTemplate.message.warning=Warning
 sampleBootsrapTemplate.couldNotDisplayLink=Could not display link
 sampleBootsrapTemplate.message.readMore=Read more
 
+jnt_bootstrapMenuBookmarkButton=Menu Bookmark button
 jnt_bootstrapBigText=Bootstrap Rich text
 jnt_bootstrapBigText.text=Text
 jnt_bootstrapBigText_description=Bootstrap Rich text containing HTML
