--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
     <version>7.1.0.0</version>
   </parent>
   <artifactId>portal-default-templates</artifactId>
-  <version>2.0.3-SNAPSHOT</version>
+  <version>3.0.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>Portal factory - default templates</name>
   <description>This is the custom module (portal factory - default templates) for running on a Jahia xCM server.</description>
@@ -78,7 +78,7 @@
     <dependency>
       <groupId>org.jahia.modules</groupId>
       <artifactId>portal-core</artifactId>
-      <version>2.0.2-SNAPSHOT</version>
+      <version>2.0.1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
