--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
 
     <properties>
         <jahia-module-type>templatesSet</jahia-module-type>
-        <jahia-depends>bookmarks,default,bootstrap3-components,bootstrap3-core,contact,event,facets,search,teasers,portal-core,portal-user-portal</jahia-depends>
+        <jahia-depends>bookmarks,default,bootstrap3-components,bootstrap3-core,contact,event,facets,search,teasers,portal-core,portal-user-portal,font-awesome</jahia-depends>
     </properties>
 
   <dependencies>
